Termino pagina HOME

--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,8 @@
     "font-awesome": "^4.7.0",
     "bootstrap-sass": "^3.3.7",
     "breakpoint-sass": "^2.7.1"
+  },
+  "devDependencies": {
+    "sass-flex-mixin": "^1.0.3"
   }
 }
