Termino HTML ANIMAÇÂO

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "sass-flex-mixin": "^1.0.3",
-    "imagehover.css": "*"
+    "imagehover.css": "*",
+    "wow": "wowjs#^1.1.2"
   }
 }
